[package]
name = "serde-prc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
hash40 = "1.3.1"
indexmap = "2.1.0"
serde = "1"
thiserror = "1.0.51"

[dev-dependencies]
serial_test = "2.0.0"
toml = { version = "0.8.8", features = ["preserve_order"] }
serde_json = { version = "1", features = ["preserve_order"] }
